# ituna

./: .buildinfo  .env.template  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.html  README.md  _config.yml  _toc.yml  build.sh  dashboard.py  entrypoint.sh  example.py  genindex.html  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  requirements3.10.txt  search.html  searchindex.js
.github/: pr_template.html  pr_template.md
.github/workflows/: build.yml  publish.yml  pytest.yml
_downloads/056806de8da745a0c59599887088495d/: _toc.yml
_downloads/b122535c22858decd576c91ff0cd6525/: ruff.toml
_downloads/ce2486cb0434d665b15169e4c0c9e754/: __init__.py
_sources/: README.md
_sources/docs/demos/: cebra_best_practices.ipynb
_sources/docs/tutorials/: core.ipynb  quickstart.ipynb
docs/demos/: cebra_best_practices.html  cebra_best_practices.ipynb
docs/tutorials/: backends.html  backends.ipynb  core.html  quickstart.html
ituna/: __init__.py  _test_helper.py  config.py  estimator.py  metrics.py  utils.py
ituna/_backends/: __init__.py  base.py  datajoint.py  disk_cache.py  in_memory.py  utils.py
ituna/_backends/scripts/: cache_distributed.py  datajoint_distributed.py
slurm/: JUWELS_run.sh  KIT_run.sh  README.html  README.md
tests/: conftest.py  test_datajoint.py  test_diskcache.py  test_diskcache_distributed.py  test_ensemble.py  test_metrics.py  test_sklearn.py  test_utils.py
