[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ituna"
dynamic = ["version"]
description = "Tune machine learning models for empirical identifiability and consistency"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tobias Schmidt", email = "tobi.schmidt@helmholtz-munich.de"},
    {name = "Steffen Schneider", email = "steffen.schneider@helmholtz-munich.de"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "tqdm",
    "python-dotenv",
    "filelock>=3.0.0",
    "typeguard>=3.0.0",
]

[project.optional-dependencies]
datajoint = ["datajoint<2"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pre-commit>=3.0",
    "cebra>=0.4.0",
    "ruff",
     # Cebra requires pkg_resources, which is part of setuptools. 
     # However, setuptools is not always installed by default anymore, so we need it here
    "setuptools",
]
docs = [
    "matplotlib",
    "cebra[datasets,demos]>=0.4.0",
    "jupyter-book<2",
    "ghp-import",
]
dashboard = [
    "streamlit>=1.49.1",
]


[tool.setuptools.dynamic]
version = {attr = "ituna.__version__"}

[tool.setuptools.packages.find]
exclude = ["third_party*", "tests*"]

[project.urls]
Homepage = "https://github.com/dynamical-inference/ituna"
Documentation = "https://dynamical-inference.github.io/ituna/"
Repository = "https://github.com/dynamical-inference/ituna.git"
"Bug Tracker" = "https://github.com/dynamical-inference/ituna/issues"

[project.scripts]
ituna-fit-distributed = "ituna._backends.scripts.cache_distributed:main"
ituna-fit-distributed-datajoint = "ituna._backends.scripts.datajoint_distributed:main"
